--- a/src/main/resources/templates/board/all.html
+++ b/src/main/resources/templates/board/all.html
@@ -25,6 +25,16 @@
     padding-left: 100px;
     padding-right: 100px;
   }
+  .table-dark {
+    width: 100px;
+    text-align: center;
+  }
+  tr > td:nth-child(1){
+    text-align: center;
+  }
+  tr > td:nth-child(2){
+    padding-left: 50px;
+  }
 
 </style>
 
