--- a/src/main/resources/templates/board/body.html
+++ b/src/main/resources/templates/board/body.html
@@ -25,6 +25,14 @@
     padding-left: 100px;
     padding-right: 100px;
   }
+  tr > td:nth-child(1) {
+    width: 100px;
+    text-align: center;
+
+  }
+  tr:nth-child(3) {
+    height: 500px;
+  }
 </style>
 
 <body>
