--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,10 +7,19 @@
 </head>
 <body>
   <h3>김동환의 메뉴</h3>
+<!--  로그인후 화면-->
+<!--<th:block th:if="로그인멤버ㄱㄱ">-->
+<!--  <p th:text="닉네임나올곳임"></p>-->
+    <ul>
+      <li><a href="/board">게시판ㄱㄱ</a></li>
+      <li><a href="#"></a></li>
+      <li><a href="#"></a></li>
+    </ul>
+<!--</th:block>-->
+<!--  로그인전 화면-->
   <ul>
-    <li><a href="/board">게시판ㄱㄱ</a></li>
-    <li><a href="#"></a></li>
-    <li><a href="#"></a></li>
+    <li><a href="#">회원가입</a></li>
+    <li><a href="#">로그인</a></li>
   </ul>
 
 </body>
