--- a/src/main/resources/templates/board/body.html
+++ b/src/main/resources/templates/board/body.html
@@ -69,8 +69,13 @@
     <button class="btn btn-dark" type="button" id="modifyBtn" value="수정">수정</button>
     <button class="btn btn-dark" type="button" id="deleteBtn" value="삭제">삭제</button>
   </div>
+  <div>
+    <!-- 댓글 코드 -->
+  </div>
   </form>
   <script>
+
+    // 게시글 본문
     // 목록 버튼
     const $listBtn = document.getElementById('listBtn');
     $listBtn.addEventListener('click', evt => {
@@ -89,10 +94,14 @@
       location.href = `/board/${pid}/del`;
     })
 
+
+    // 댓글 부분
+
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+  </script>
 
 
 </body>
