--- a/src/main/resources/templates/signIn.html
+++ b/src/main/resources/templates/signIn.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <h3>어서오시오</h3>
-  <form action="">
+  <form action="" method="POST">
     <p><input type="text" name="email" placeholder="이메일"></p>
-    <p><input type="password" name="password" placeholder="비번"></p>
+    <p><input type="password" name="passwd" placeholder="비번"></p>
     <p><button id="loginBtn">로그인</button></p>
   </form>
 
