--- a/src/main/resources/templates/board/body.html
+++ b/src/main/resources/templates/board/body.html
@@ -37,7 +37,6 @@
 
 <body>
   <h3>게시글임당(보기)</h3>
-  <br>
   <div id="tbb">
     <form action="#" method="post">
       <table class="table table-secondary">
@@ -62,7 +61,9 @@
           </tr>
         </tbody>
       </table>
-  </div>
+    </form>
+    </div>
+  <!-- postId 숨겨두기 -->
   <input type="hidden" id="postId" th:value="${post.postId}">
   <div id="btns">
     <button class="btn btn-dark" type="button" id="listBtn" value="목록">목록</button>
@@ -71,9 +72,26 @@
   </div>
   <div>
     <!-- 댓글 코드 -->
+    <!-- 댓글 작성란 -->
+    <form id="replyForm">
+      <textarea name="" placeholder="댓글 ㄱㄱ" id="replyBody" cols="30" rows="10"></textarea>
+      <button>등록</button>
+    </form>
+    <!-- 댓글 목록 -->
+
+
+    <div id="replyList">
+
+    </div>
   </div>
   </form>
-  <script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+  crossorigin="anonymous">
+</script>
+  <script th:inline="javascript">
+    
+    
 
     // 게시글 본문
     // 목록 버튼
@@ -93,15 +111,86 @@
       if(!window.confirm('삭제하시겠습니까?')) return;
       location.href = `/board/${pid}/del`;
     })
+    // 로그인 세션
+    const memberId = [[${session.loginMember.memberId}]];
+    const Email = [[${session.loginMember.email}]];
+    const nickname = [[${session.loginMember.Nickname}]];
+    const role = [[${session.loginMember.gubun}]]
 
+    
+    
 
     // 댓글 부분
+    document.getElementById('replyForm').addEventListener('submit', async function(evt) {
+      evt.preventDefault();
+      const replyBody = document.getElementById('replyBody').value;
+
+      const url = `http://localhost:9090/board/${pid}/replies`;
+      const payload = {
+        replyBody, replyWriter:nickname
+      };
+      const option = {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          accept: 'application/json',
+        },
+        body: JSON.stringify(payload),
+      };
+      
+      try {
+        const res = await fetch(url,option);
+        if(!res.ok) throw new Error('서버에러발생');
+
+        const result = await res.json();
+        // 성공
+        if(result.header.rtcd =='00'){
+          document.getElementById('replyBody').value = '';
+          await listReplies(pid);
+        } else {
+          throw new Error('댓글 실패!');
+        }
+      } catch (err) {
+        console.error(err.message);
+      }
+    })
+    
+// 댓글 목록 조회
+async function listReplies(pid) {
+  const url = `http://localhost:9090/board/${pid}/replies`;
+  const option = {
+    method:'GET',
+    headers:{
+      accept:'application/json'
+    }
+  };
+
+  try {
+    const res = await fetch(url,option);
+    if (!res.ok) throw new Error('서버응답오류');
+
+    const result = await res.json();
+    if (result.header.rtcd == '00') {
+      const str = result.body.map(reply =>
+        `<div>
+          <span>${reply.replyId}</span>
+          <span>${reply.replyWriter}</span>
+          <span>${reply.replyBody}</span>
+          <span>${reply.cdate}</span>
+        </div>`).join('');
+
+      document.getElementById('replyList').innerHTML = str;
+    } else {
+      throw new Error('댓글 목록 조회 실패!');
+    }
+  } catch (err) {
+    console.error(err.message);
+  }
+}
+listReplies(pid);
 
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous">
-  </script>
+
 
 
 </body>
