--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,20 +7,37 @@
 </head>
 <body>
   <h3>김동환의 메뉴</h3>
-<!--  로그인후 화면-->
-<!--<th:block th:if="로그인멤버ㄱㄱ">-->
-<!--  <p th:text="닉네임나올곳임"></p>-->
+<!--로그인후 화면-->
+<th:block th:if="${session.loginMember}">
+ <p th:text="${session.loginMember.nickname}"></p>
     <ul>
       <li><a href="/board">게시판ㄱㄱ</a></li>
-      <li><a href="#"></a></li>
+      <li><a href="" id="logout">로그아웃</a></li>
       <li><a href="#"></a></li>
     </ul>
-<!--</th:block>-->
+</th:block>
 <!--  로그인전 화면-->
+<th:block th:unless="${session.loginMember}">
   <ul>
-    <li><a href="#">회원가입</a></li>
-    <li><a href="#">로그인</a></li>
+    <li><a href="/join">회원가입</a></li>
+    <li><a href="/login">로그인</a></li>
   </ul>
+</th:block>
+<script>
+  const $logout = document.getElementById('logout');
+  $logout?.addEventListener('click', evt => {
+    evt.preventDefault();   // 기본 이벤트 제거
+    fetch('/logout', { method: 'POST', body: null })
+     .then(res => res.text())
+     .then(res => {
+       if (res === 'OK') {
+         location.href = '/';
+       }
+     })
+     .catch(console.log);
+ });
+  
+</script>
 
 </body>
 </html>
