--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -9,11 +9,12 @@
 <h3>너 내 동료가 되어라</h3>
 
 <form action="" method="POST">
-  <p><input type="text" name="email" placeholder="이메일"></p>  
-  <p><input type="password" name="password" placeholder="비밀번호"></p>  
+  <p><input type="text" name="email" placeholder="이메일"></p>
+  <p><input type="password" name="passwd" placeholder="비밀번호"></p>
   <p><input type="password"  placeholder="비밀번호 함더"></p>  
   <p><input type="text" name="nickname" placeholder="닉네임"></p>  
   <p><button id="signUpBtn">회원가입</button></p>
+
 </form>
 <script>
 
