--- a/src/main/resources/templates/board/body.html
+++ b/src/main/resources/templates/board/body.html
@@ -25,11 +25,13 @@
     padding-left: 100px;
     padding-right: 100px;
   }
-  tr > td:nth-child(1) {
+
+  tr>td:nth-child(1) {
     width: 100px;
     text-align: center;
 
   }
+
   tr:nth-child(3) {
     height: 500px;
   }
@@ -62,7 +64,7 @@
         </tbody>
       </table>
     </form>
-    </div>
+  </div>
   <!-- postId 숨겨두기 -->
   <input type="hidden" id="postId" th:value="${post.postId}">
   <div id="btns">
@@ -78,22 +80,19 @@
       <button>등록</button>
     </form>
     <!-- 댓글 목록 -->
-
-
     <div id="replyList">
+
+
 
     </div>
   </div>
   </form>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-  crossorigin="anonymous">
-</script>
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+    </script>
   <script th:inline="javascript">
-    
-    
+    /* 게시글 본문 */
 
-    // 게시글 본문
     // 목록 버튼
     const $listBtn = document.getElementById('listBtn');
     $listBtn.addEventListener('click', evt => {
@@ -108,26 +107,26 @@
     // 삭제 버튼
     const $deleteBtn = document.getElementById('deleteBtn');
     $deleteBtn.addEventListener('click', evt => {
-      if(!window.confirm('삭제하시겠습니까?')) return;
+      if (!window.confirm('삭제하시겠습니까?')) return;
       location.href = `/board/${pid}/del`;
     })
     // 로그인 세션
-    const memberId = [[${session.loginMember.memberId}]];
-    const Email = [[${session.loginMember.email}]];
-    const nickname = [[${session.loginMember.Nickname}]];
-    const role = [[${session.loginMember.gubun}]]
+    const memberId = [[${ session.loginMember.memberId }]];
+    const Email = [[${ session.loginMember.email }]];
+    const nickname = [[${ session.loginMember.Nickname }]];
+    const role = [[${ session.loginMember.gubun }]]
 
-    
-    
 
-    // 댓글 부분
-    document.getElementById('replyForm').addEventListener('submit', async function(evt) {
+    /* 댓글 */
+
+    // 댓글 등록
+    document.getElementById('replyForm').addEventListener('submit', async function (evt) {
       evt.preventDefault();
       const replyBody = document.getElementById('replyBody').value;
 
       const url = `http://localhost:9090/board/${pid}/replies`;
       const payload = {
-        replyBody, replyWriter:nickname
+        replyBody, replyWriter: nickname, postId: pid
       };
       const option = {
         method: 'POST',
@@ -137,14 +136,14 @@
         },
         body: JSON.stringify(payload),
       };
-      
+
       try {
-        const res = await fetch(url,option);
-        if(!res.ok) throw new Error('서버에러발생');
+        const res = await fetch(url, option);
+        if (!res.ok) throw new Error('서버에러발생');
 
         const result = await res.json();
         // 성공
-        if(result.header.rtcd =='00'){
+        if (result.header.rtcd == '00') {
           document.getElementById('replyBody').value = '';
           await listReplies(pid);
         } else {
@@ -154,45 +153,129 @@
         console.error(err.message);
       }
     })
+
+
+    // 댓글 목록 모체
+  const $replyList = document.getElementById('replyList');
+
+    // 댓글 목록 조회
+    async function listReplies(pid) {
+      const url = `http://localhost:9090/board/${pid}/replies`;
+      const option = {
+        method: 'GET',
+        headers: {
+          accept: 'application/json'
+        }
+      };
+      try {
+        const res = await fetch(url, option);
+        if (!res.ok) throw new Error('서버응답오류');
+        const result = await res.json();
+        if (result.header.rtcd == '00') {
+          const str = result.body.map(reply =>
+            `<div class="replies">
+              <p><input type="hidden" class="replyId" value="${reply.replyId}"></p>
+              <p>${reply.cdate}</p>
+              <p class="replyMan">${reply.replyWriter}</p>
+              <p class="replyBody">${reply.replyBody}</p>
+            </div>  
+            <div class="Buttons">
+              <button class="updBtn">수정</button>
+              <button class="delBtn">삭제</button>
+            </div>
+           `).join('');
+          $replyList.innerHTML = str;
+        } else {
+          throw new Error('댓글 목록 조회 실패!');
+        }
+      } catch (err) {
+        console.error(err.message);
+      }
+    }
+
+    listReplies(pid);
+
+
+    $replyList.addEventListener('click', evt => {
+      const closestDiv = evt.target.closest('.replies');
+      const replyId_p = closestDiv.querySelector('.replyId');       //replyId 있는 p
+      console.log(replyId_p.value);                                 //replyId 가져오기(확인)
+      const replyWriter_p = closestDiv.querySelector('.replyMan');  //replyWriter 있는 p
+      const replyBody_p = closestDiv.querySelector('.replyBody');   //replyBody 있는 p
+      
+      const replyId = replyId_p.value;
+      const replyWriter = replyWriter_p.textContent;
+      const replyBody = {
+        replyBody : replyBody_p.textContent
+      }
+
+      console.log(evt.target.className);
+      // 삭제
+      if(evt.target.className == 'delBtn'){
+        console.log('삭제버튼');
+        console.log(closestDiv);
+        console.log(replyId_p);
+
+      }
+
+      // 수정
+
+    })
     
-// 댓글 목록 조회
-async function listReplies(pid) {
-  const url = `http://localhost:9090/board/${pid}/replies`;
-  const option = {
-    method:'GET',
-    headers:{
-      accept:'application/json'
+
+    // 댓글 삭제
+    async function deleteById(pid,rid) {
+      const url = `/board/${pid}/replies/${rid}`;
+      const option = {
+        method: 'DELETE',
+        headers: { accept: 'application/json' }
+      }
+      try {
+        const res = await fetch(url, option);
+        if (!res.ok) throw new Error('서버에러임');
+
+        const result = await res.json();
+
+        if (result.header.rtcd == '00') {
+          await listReplies(pid);
+        } else {
+          throw new Error('댓글 삭제 실패');
+        }
+      } catch (err) {
+        console.error(err.message);
+      }
     }
-  };
 
-  try {
-    const res = await fetch(url,option);
-    if (!res.ok) throw new Error('서버응답오류');
+    
+    // 댓글 수정
+    async function updateById(rid, 수정된댓글) {
+      const url = `/board/${pid}/replies/${rid}`;
+      const payload = 수정된댓글
+      const option = {
+        method: 'PATCH',
+        headers: {
+          'Content-Type': 'application/json',
+          accept: 'application/json'
+        },
+        body: JSON.stringify(payload),
 
-    const result = await res.json();
-    if (result.header.rtcd == '00') {
-      const str = result.body.map(reply =>
-        `<div>
-          <span>${reply.replyId}</span>
-          <span>${reply.replyWriter}</span>
-          <span>${reply.replyBody}</span>
-          <span>${reply.cdate}</span>
-        </div>`).join('');
+      };
 
-      document.getElementById('replyList').innerHTML = str;
-    } else {
-      throw new Error('댓글 목록 조회 실패!');
+      try {
+        const res = await fetch(url, option);
+        if (!res.ok) return new Error('서버응답오류');
+        const result = await res.json();
+
+        if (result.header.rtcd == '00') {
+          console.log(result.body);
+        } else {
+          new Error('수정실패');
+        }
+      } catch (err) {
+        console.error(err.message);
+      }
     }
-  } catch (err) {
-    console.error(err.message);
-  }
-}
-listReplies(pid);
-
   </script>
-
-
-
 </body>
 
 </html>
