--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,23 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>초기화면</title>
+  <!--  bootstrap css-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" 
+    rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" 
+    crossorigin="anonymous">  
+<style>
+  body {
+    padding: 20px;
+  }
+</style>
 </head>
 <body>
   <h3>김동환의 메뉴</h3>
 <!--로그인후 화면-->
 <th:block th:if="${session.loginMember}">
- <p th:text="${session.loginMember.nickname}"></p>
-    <ul>
-      <li><a href="/board">게시판ㄱㄱ</a></li>
-      <li><a href="" id="logout">로그아웃</a></li>
-      <li><a href="#"></a></li>
+ <p th:text="|웰컴 ${session.loginMember.nickname}|"></p>
+    <ul class="list-group">
+      <li class="list-group-item"><a href="/board">게시판ㄱㄱ</a></li>
+      <li class="list-group-item"><a href="" id="logout">로그아웃</a></li>
+      <li class="list-group-item"><a href="#"></a></li>
     </ul>
 </th:block>
 <!--  로그인전 화면-->
 <th:block th:unless="${session.loginMember}">
-  <ul>
-    <li><a href="/join">회원가입</a></li>
-    <li><a href="/login">로그인</a></li>
+  <ul class="list-group">
+    <li class="list-group-item"><a href="/members/join">회원가입</a></li>
+    <li class="list-group-item"><a href="/login">로그인</a></li>
   </ul>
 </th:block>
 <script>
